--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,17 @@
     </dependencies>
 
     <build>
+        <!--用于识别src/main/java路径下的xml文件-->
+        <!--<resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
