--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -25,7 +25,19 @@ spring:
       filters: stat,wall,slf4j # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000  # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 
+  #redis 配置：
+  redis:
+    host: localhost
+  # 邮件
+  mail:
+    username: 3054097744@qq.com
+    password: kahekmmeyfecdfia # 授权码，并非真正邮箱密码
+    host: smtp.qq.com
+    properties.mail.smtp.ssl.enable: true # 开启安全模式
+
 # mybatis 配置：
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml
   config-location: classpath:mybatis/mybatis-config.xml
+
+
